# moose

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  DEVELOP.md  Dockerfile  Makefile  NOTICE  README.md  computation.py  conftest.py  convert_onnx_to_moose_no_aes.py  custom_comp_scratch.py  deny.toml  edsl.py  edsl_test.py  logger.py  main.py  pycape_custom_comp.py  pytest.ini  release.toml  requirements-dev.txt  runtime.py  server.py  setup.cfg  setup.py  worker.py
crypto/: Cargo.toml
crypto/benches/: my_benchmark.rs  rng.rs
crypto/src/: lib.rs  prng.rs  ring.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/pass/: 02-with_context.rs  03-with_context.rs  04-with_context.rs  05-with_context-brackets.rs  06-with_context-sub.rs  07-with_context-constants.rs  08-with_context-self.rs
modules/: Cargo.toml  build.rs
modules/protos/: choreography.proto
modules/src/: lib.rs
modules/src/choreography/: filesystem.rs  grpc.rs  mod.rs
modules/src/compact_execution/: mod.rs
modules/src/execution/: grpc.rs  mod.rs
modules/src/networking/: constants.rs  grpc.rs  mod.rs  tcpstream.rs
modules/src/storage/: csv.rs  filesystem.rs  local_file_storage.rs  mod.rs  numpy.rs
moose/: Cargo.toml  README.md  __init__.py  asyncstore.py  build.rs  getstats.sh  log  logger.py  modules.txt  runtime.py  server.py  storage.py  testing.py  utils.py  worker.py
moose/benches/: exec.rs  networking.rs  rep_computation.moose  rep_computation.mpc  rng.rs  runtime.rs
moose/channels/: grpc.py  memory.py
moose/choreography/: cape_coordinator.py  grpc.py
moose/cluster/: cluster_spec.py
moose/compiler/: bit.py  compiler.py  computation.py  edsl.py  edsl_test.py  host.py  host_test.py  mpspdz.py  mpspdz_test.py  primitives.py  pruning.py  render.py  replicated.py  replicated_test.py  ring.py  standard.py  substitution_pass.py
moose/compiler/fixedpoint/: host_encoding_pass.py  host_encoding_pass_test.py  host_lowering_pass.py  host_lowering_pass_test.py  host_ring_lowering_pass.py  host_ring_lowering_pass_test.py  ring_lowering_pass.py  ring_lowering_pass_test.py
moose/compiler/mpspdz/: frontend.py  importer.py
moose/compiler/replicated/: __init__.py  bit_utils.py  encoding_pass.py  encoding_pass_test.py  from_standard_pass.py  lowering_pass.py  lowering_pass_test.py  print_utils.py  replicated_pass.py  replicated_pass_test.py  share_reveal_pass.py  share_reveal_pass_test.py  (+3 more)
moose/computation/: __init__.py  base.py  bit.py  dtypes.py  fixedpoint.py  host.py  mpspdz.py  primitives.py  replicated.py  ring.py  standard.py  utils.py  utils_test.py
moose/computations/: base.py  fixedpoint.py  primitives.py
moose/deprecated/: worker.py
moose/edsl/: __init__.py  base.py  base_test.py  dtypes.py  tracer.py
moose/examples/: exec.rs
moose/executor/: __init__.py  base.py  executor.py  executor_test.py  executor_test_fixtures.py  mpspdz.py  proxy.py
moose/networking/: broker.py  cape_broker.py  cape_broker_test.py  grpc.py  memory.py
moose/proptest-regressions/: fixedpoint.txt
moose/protos/: broker.proto  channel_manager.proto  choreography.proto  executor.proto  networking.proto
moose/src/: additive.rs  boolean.rs  common.rs  computation.rs  encrypted.rs  error.rs  execution.rs  fixedpoint.rs  floatingpoint.rs  grpc.rs  host.rs  kernels.rs  lib.rs  logical.rs  mirrored.rs  networking.rs  prelude.rs  prim.rs  prng.rs  python_computation.rs  reindeer.rs  replicated.rs  storage.rs  symbolic.rs  text_computation.rs  textual.rs  types.rs  utils.rs
moose/storage/: base.py  memory.py
networking/: Cargo.toml
pymoose/: .gitignore  Cargo.toml  README.md  pyproject.toml  release.toml  requirements-dev.txt  requirements.in  setup.cfg  setup.py
pymoose/benchmark/: XGBClassifier_10feature_2output_100estimators.onnx  XGBRegressor_10feature_1output_100estimators.onnx  convert_onnx_to_moose.py  logical_comp_XGBClassifier_10feature_2output_100estimators.bytes  logical_comp_XGBRegressor_10feature_1output_100estimators.bytes
pymoose/compatibility/: aes-lingreg-logical-0.1.2.moose  aes-lingreg-logical-0.1.3.moose  mean-logical-0.1.4.moose  mean-logical-0.1.5.moose
pymoose/compiler/: bit.py  compiler.py  host.py  host_test.py  primitives.py  ring.py  standard.py
pymoose/computation/: bit.py  host.py  primitives.py  replicated.py
pymoose/deprecated/: testing.py  utils.py
pymoose/docs/: requirements.txt
pymoose/edsl/: base.py  base_test.py
pymoose/protos/: executor.proto
pymoose/pymoose/: __init__.py  logger.py  runtime.py  testing.py
pymoose/requirements/: base.in  base.txt  dev.in  dev.txt
pymoose/rust_integration/: comparison_test.py
pymoose/rust_integration_tests/: add_n_test.py  argmax_test.py  boolean_ops_test.py  concat_test.py  dtype_conversions_test.py  exp_test.py  log_test.py  maximum_test.py  mirrored_ops_test.py  ones_test.py  reduce_max_test.py  relu_test.py  rerurn_test.py  reshape_test.py  select_test.py  shape_test.py  sigmoid_interation_test.py  sigmoid_test.py  slicing.py  slicing_test.py  softmax_test.py  softmax_test_host.py  sqrt_test.py  squeeze_test.py  transpose_test.py  uint64_test.py  zeros_test.py
pymoose/src/: bindings.rs  computation.rs  kernels.rs  lib.rs  python_computation.rs  snowflake_storage.rs
python-bindings/: Cargo.toml  README.md  moose_kernels_test.py  moose_test.py  requirements-dev.txt  setup.py
python-bindings/moose/: __init__.py
python-bindings/moose_kernels.egg-info/: ring_ext_test.py
python-bindings/src/: lib.rs
reindeer/: .gitignore  Cargo.toml  README.md  hosts.json  run.sh
reindeer/examples/: run-vixen.sh  test.session
reindeer/src/: comet.rs  cometctl.rs  comp_overflow.rs  dasher.rs  lib.rs  rudolph.rs  vixen.rs
rust/elk/: Cargo.toml
rust/moose/: Cargo.toml
rust/pymoose/: .gitignore  Cargo.toml  README.md  log  log2  moose_kernels_test.py  setup.py  test.py
rust/worker/: Cargo.toml
worker/: Cargo.toml  README.md  build.rs  comp.bytes  gencomputation.py  hosts.json  run.sh
worker/examples/: test.moose  test.toml
worker/protos/: networking.proto
worker/src/: dasher.rs  main.rs
(+825 files in other folders)
