[package]
name = "moose-macros"
version = "0.2.1"
license = "Apache-2.0"
edition = "2018"
authors = [
    "TF Encrypted Authors <tfencrypted@gmail.com>",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "~1.0"
quote = "~1.0"
syn = { version = "~1.0", features = ["full", "visit-mut"] }

[dev-dependencies]
trybuild = "~1.0"
trim-margin = "~0.1"
