[package]
name = "moose-modules"
version = "0.1.6-beta.1"
license = "MIT"
edition = "2018"
authors = []

[dependencies]
async_cell = "~0.2"
async-trait = "~0.1"
backoff = { version = "~0.4", features = ["tokio"] }
bincode = "~1.3"
dashmap = "~5.1"
futures = "0.3"
lazy_static = "~1.4"
moose = { path = "../moose", default-features = false, features = ["async_execute"] }
notify = "4.0"
prost = "0.9"
serde = { version = "~1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5"
tonic = "0.6"
tracing = { version="0.1", features = ["log"] }
tracing-attributes = "0.1"

[build-dependencies]
tonic-build = "0.6"
