[package]
name = "moose-modules"
version = "0.2.0"
license = "MIT"
edition = "2018"
authors = []

[dependencies]
async_cell = "~0.2"
async-trait = "~0.1"
backoff = { version = "~0.4", features = ["tokio"] }
bincode = "~1.3"
csv = "~1.1"
dashmap = "~5.1"
futures = "0.3"
lazy_static = "~1.4"
moose = { path = "../moose", default-features = false, features = ["async_execute"] }
ndarray = { version="~0.15", features=["serde"] }
ndarray-npy = "~0.8"
notify = "4.0"
prost = "0.9"
serde = { version = "~1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5"
tonic = { version = "~0.6", features = ["tls"] }
tracing = { version="0.1", features = ["log"] }
tracing-attributes = "0.1"
x509-parser = "~0.13"

[build-dependencies]
tonic-build = "~0.6"

[dev-dependencies]
tempfile = "~3.3"
base64 = "~0.13"
