[package]
name = "moose"
version = "0.1.6-beta.1"
license = "MIT"
authors = [""]
description = ""
repository = ""
homepage = ""
keywords = ["", ""]
categories = ["", ""]
edition = "2018"

[features]
default = ["blas", "compile", "sync_execute", "async_execute"]
blas = ["ndarray-linalg"]
compile = []
sync_execute = []
async_execute = []

[dependencies]
aes = "~0.8"
anyhow = "~1.0"
async_cell = "~0.2"
async-trait = "~0.1"
bincode = "~1.3"
bitvec = { version="~1", features=["serde"] }
blake3 = { version="~1.3", features=["std"] }
byteorder = "~1.4"
bytes = "~1.1"
dashmap = "~5.1"
derive_more = "~0.99"
futures = "~0.3"
itertools = "~0.10"
lazy_static = "~1.4"
log = "~0.4"
macros = { path = "../macros" }
maplit = "~1.0"
ndarray = { version="~0.15", features=["serde"] }
ndarray-linalg = { version = "0.14", features = ["openblas-system"], optional = true }
num = "~0.4"
num-traits = "~0.2"
parking_lot = "~0.12"
paste = "~1.0"
petgraph = "~0.6"
rand = { version = "~0.8", features = ["std", "std_rng"] }
rayon = "~1.5"
rmp-serde = "~1.0"
serde = { version="~1.0", features=["derive", "rc"] }
static_assertions = "~1.1"
thiserror = "~1.0"
tokio = { version="~1.17", features=["full"] }
tracing = { version="~0.1", features=["log"] }
nom = { version="~7.1" }

[dev-dependencies]
aes-gcm = "~0.9"
criterion = { version="~0.3", features=["async_tokio"] }
getrandom = "~0.2"
proptest = "~1.0"
rand_chacha = "~0.3"
rstest = "~0.12"

[[bench]]
name = "rng"
harness = false

[[bench]]
name = "exec"
harness = false

[[bench]]
name = "networking"
harness = false

[[bench]]
name = "runtime"
harness = false
