[package]
name = "pymoose"
version = "0.1.5-beta.1"
license = "MIT/Apache-2.0"
authors = [""]
description = ""
repository = ""
homepage = ""
keywords = ["", ""]
categories = ["", ""]
edition = "2018"

[lib]
name = "pymoose"
crate-type = ["cdylib"]

[dependencies]
anyhow = "~1.0"
approx = "~0.4"
numpy = "~0.14"
ndarray = "~0.15"
moose = { path = "../moose" }
pyo3 = "~0.14"
rmp-serde = "~1.0"
serde = { version = "~1.0", features = ["derive"] }

[dev-dependencies]
flate2 = "~1.0"
rstest = "~0.12"

[features]
extension-module = ["pyo3/extension-module"]
