[package]
name = "reindeer"
version = "0.1.6-beta.1"
license = "MIT"
edition = "2018"
authors = []
default-run = "rudolph"

[dependencies]
moose = { path = "../moose", default-features = false, features = ["async_execute"] }
moose-modules = { path = "../modules" }
opentelemetry = { version = "0.17", default-features = false, features = ["trace"] }
opentelemetry-jaeger = "0.16"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "~0.6"
tracing = { version = "0.1", features = ["log"] }
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.17"


[[bin]]
name = "rudolph"
path = "src/rudolph.rs"

[[bin]]
name = "dasher"
path = "src/dasher.rs"

[[bin]]
name = "vixen"
path = "src/vixen.rs"
