[package]
name = "reindeer"
version = "0.2.1-beta.1"
license = "Apache-2.0"
edition = "2018"
authors = [
    "TF Encrypted Authors <tfencrypted@gmail.com>",
]
publish = false

[dependencies]
clap = { version = "~3.1", features = ["derive"] }
moose = { path = "../moose", default-features = false, features = ["async_execute"] }
opentelemetry = { version = "0.17", default-features = false, features = ["trace"] }
opentelemetry-jaeger = "0.16"
serde_json = "1.0"
structopt = "0.3"
tonic = "~0.6"
tracing = { version = "0.1", features = ["log"] }
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.17"

[lib]
name = "reindeer"

[[bin]]
name = "comet"
path = "src/comet.rs"

[[bin]]
name = "cometctl"
path = "src/cometctl.rs"

[[bin]]
name = "dasher"
path = "src/dasher.rs"

[[bin]]
name = "rudolph"
path = "src/rudolph.rs"

[[bin]]
name = "vixen"
path = "src/vixen.rs"
