[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "~0.1"
arrow = "~4.0"
anyhow = "~1.0"
async_cell = "~0.2"
bincode = "~1.3"
datafusion = "~4.0"
dashmap = "~5.1"
maplit = "~1.0"
moose = { path = "../moose" }
ndarray = { version="~0.15", features=["serde"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
structopt = "~0.3"
tokio = { version="~1.14", features=["full"] }
