[package]
name = "worker"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
async_cell = "~0.2"
async-trait = "~0.1"
bincode = "~1.3"
dashmap = "~4.0"
moose = { path = "../moose" }
prost = "0.9"
serde = { version="~1.0", features=["derive"] }
serde_bytes="~0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"
