[package]
name = "worker"
version = "0.1.0"
license = "MIT"
edition = "2018"
authors = []

[dependencies]
async_cell = "~0.2"
async-trait = "~0.1"
bincode = "~1.3"
dashmap = "~4.0"
moose = { path = "../moose", default-features = false, features = ["async_execute"] }
prost = "0.9"
serde = { version = "~1.0", features = ["derive"] }
serde_bytes="~0.11"
structopt = "~0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"
