[package]
name = "elk"
version = "0.1.0"
edition = "2018"
authors = ["Cape Privacy <support@capeprivacy.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0"
compilation = { path = "../compilation" }
moose = { path = "../moose" }
structopt = "~0.3"
