[package]
name = "moose"
version = "0.1.2-alpha.0"
license = "MIT/Apache-2.0"
authors = [""]
description = ""
repository = ""
homepage = ""
keywords = ["", ""]
categories = ["", ""]
edition = "2018"

[dependencies]
aes = "~0.6"
anyhow = "~1.0"
backtrace = "~0.3"
byteorder = "~1.3"
colored = "~2.0"
derive-new = "~0.5"
downcast-rs = "~1.2"
educe = "~0.4"
itertools = "~0.9"
log = "~0.4"
maplit = "~1.0"
ndarray = "~0.13.1"
num-traits = "~0.2"
petgraph = "~0.5"
rand = "~0.7"
rand_chacha = "~0.2"
smallvec = "~1.4"
sodiumoxide = "~0.2"
tokio = "~0.3"
tracing = "~0.1"
vec-utils = "~0.3"

[dev-dependencies]
criterion = "~0.3"
env_logger = "~0.8"
lazy_static = "~1.4"
proptest = "~0.10"

[[bench]]
name = "rng"
harness = false
