[package]
name = "pymoose"
version = "0.1.1-alpha.0"
license = "MIT/Apache-2.0"
authors = [""]
description = ""
repository = ""
homepage = ""
keywords = ["", ""]
categories = ["", ""]
edition = "2018"

[lib]
name = "moose_kernels"
crate-type = ["cdylib"]

[dependencies]
numpy = "~0.12"
ndarray = "~0.13.1"
moose = { path = "../moose" }
pyo3 = { version = "0.12", features = ["extension-module"] }
