[package]
name = "pymoose"
version = "0.1.2-alpha.0"
license = "MIT/Apache-2.0"
authors = [""]
description = ""
repository = ""
homepage = ""
keywords = ["", ""]
categories = ["", ""]
edition = "2018"

[lib]
name = "moose_kernels"
crate-type = ["cdylib"]

[dependencies]
numpy = "~0.12"
ndarray = "~0.13.1"
moose = { path = "../moose" }
rmp-serde = "~0.15"
serde = { version="~1.0", features=["derive"] }
serde_bytes="~0.11"

[dependencies.pyo3]
version = "0.12"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
