[package]
name = "pymoose"
version = "0.1.2-alpha.0"
license = "MIT/Apache-2.0"
authors = [""]
description = ""
repository = ""
homepage = ""
keywords = ["", ""]
categories = ["", ""]
edition = "2018"

[lib]
name = "pymoose"
crate-type = ["cdylib"]

[dependencies]
anyhow = "~1.0"
approx = "~0.4"
maplit = "~1.0"
numpy = "=0.13.1"
ndarray = "~0.14"
moose = { path = "../moose" }
pyo3 = {version="~0.13", features=["extension-module"]}
tokio = { version="~1.4", features=["full"] }
rand = "~0.8"
rmp-serde = "~0.15"
serde = { version="~1.0", features=["derive"] }
serde_bytes="~0.11"
